fix single collection spacing in preview mode

--- a/admin-base/materialize/custom/_vue-form-generator.scss
+++ b/admin-base/materialize/custom/_vue-form-generator.scss
@@ -546,6 +546,7 @@
                 .preview-list {
                     > li.preview-item {
                         clear: both;
+                        padding-bottom: 0;
                         .singlefield {
                             float: left;
                             padding-bottom: 0;
